--- a/init.v9.rc
+++ b/init.v9.rc
@@ -82,13 +82,11 @@ service qmuxd /system/bin/qmuxd
 service hci_qcomm_init /system/bin/log -t qcom-bluetooth -p i "hci_qcomm_init service requested"
     user bluetooth
     group bluetooth net_bt_admin
-    disabled
     oneshot
 
 service hciattach /system/bin/sh /system/etc/init.bt.sh
     user bluetooth
     group qcom_oncrpc bluetooth net_bt_admin system
-    disabled
     oneshot
 
 on property:init.svc.wpa_supplicant=stopped
@@ -98,20 +96,16 @@ on property:init.svc.wpa_supplicant=stopped
 service wpa_supplicant /system/bin/wpa_supplicant -Dawext -iwlan0 -W -c/data/misc/wifi/wpa_supplicant.conf
     group wifi inet
     socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
     oneshot
 
 service dhcpcd_wlan0 /system/bin/dhcpcd -BKL
-    disabled
     oneshot
 
-#service wlan_tool /system/bin/wlan_tool
-#        disabled
-#        oneshot
+service wlan_tool /system/bin/wlan_tool
+oneshot
 
-#service abtfilt /system/bin/abtfilt -c -d -z -n
-#    disabled
-#    oneshot
+service abtfilt /system/bin/abtfilt -c -d -z -n
+oneshot
 
 service akmd /system/bin/akmd2
     oneshot
@@ -126,5 +120,3 @@ service hostapd /system/bin/hostapd /data/misc/wifi/hostapd.conf
     socket hostapd_athap0 dgram 660 wifi wifi
     group wifi inet
     oneshot
-    disabled
-
